<resources>
    <string name="app_name">e-Trash</string>
    <string name="title_activity_splash">SplashActivity</string>
    <string name="e_mail">E-mail</string>
    <string name="nome">Nome completo</string>
    <string name="senha">Senha</string>
    <string name="salvar">Salvar</string>
    <string name="cancelar">Cancelar</string>
    <string name="latitude">Latitude:</string>
    <string name="longitude">Longitude:</string>
    <string name="nome_local">Nome do local</string>
    <string name="endereco">Endereço</string>
    <string name="rua">Rua:</string>
    <string name="cidade">Cidade:</string>
    <string name="estado">Estado:</string>
    <string name="pais">País:</string>
    <string name="nome_lixo">Nome do lixo</string>
    <string name="informacoes">Informações sobre o lixo</string>
    <string name="tirar_foto">Tirar foto</string>
    <string name="fazer_publicacao">Fazer publicação</string>
    <string name="fazer_pergunta">Faça uma pergunta</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>

    <string name="comentarios">Comentários</string>
    <string name="action_logout">Deslogar</string>

    <string name="menu_perfil">Perfil</string>
    <string name="menu_agendamentos">Agendamentos</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="lixos">Lixos</string>
    <string name="menu_add_ponto_coleta">Adicionar ponto de coleta</string>
    <string name="menu_rem_ponto_coleta">Remover ponto de coleta</string>
</resources>
