<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:tools="http://schemas.android.com/tools"
      tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
                android:id="@+id/nav_perfil"
                android:icon="@drawable/ic_perfil_24dp"
                android:title="@string/menu_perfil"/>
        <item
                android:id="@+id/nav_agendamentos"
                android:icon="@drawable/ic_agendamento_24dp"
                android:title="@string/menu_agendamentos"/>
        <item
                android:id="@+id/nav_slideshow"
                android:icon="@drawable/ic_menu_slideshow"
                android:title="@string/menu_slideshow"/>
        <item
                android:id="@+id/nav_tools"
                android:icon="@drawable/ic_menu_manage"
                android:title="@string/menu_tools"/>
    </group>

    <item android:title="Administração">
        <menu>
            <item
                    android:id="@+id/nav_add_ponto_coleta"
                    android:icon="@drawable/ic_add_ponto_coleta_24dp"
                    android:title="@string/menu_add_ponto_coleta"/>
            <item
                    android:id="@+id/nav_rem_ponto_coleta"
                    android:icon="@drawable/ic_rem_ponto_coleta_24dp"
                    android:title="@string/menu_rem_ponto_coleta"/>
        </menu>
    </item>

</menu>
