<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <de.hdodenhof.circleimageview.CircleImageView
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:src="@drawable/avatar"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp"
            android:id="@+id/imagemPerfilPostagemLixo"/>
    <TextView
            android:text="@string/nome"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/tv_nomeUsuarioFeed" android:includeFontPadding="true"
            android:textSize="18sp" android:autoText="false"
            app:layout_constraintStart_toEndOf="@+id/imagemPerfilPostagemLixo" android:layout_marginStart="8dp"
            app:layout_constraintTop_toTopOf="@+id/imagemPerfilPostagemLixo"
            app:layout_constraintBottom_toBottomOf="@+id/imagemPerfilPostagemLixo" android:layout_marginEnd="16dp"
            app:layout_constraintEnd_toEndOf="parent" android:textAllCaps="true" android:textStyle="bold"/>
    <ImageView
            android:layout_width="0dp"
            android:layout_height="300dp" app:srcCompat="@mipmap/ic_launcher"
            android:id="@+id/iv_fotoLixoFeed" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/imagemPerfilPostagemLixo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" android:foregroundGravity="center"/>
    <TextView
            android:text="@string/informacoes"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/tv_informacoesLixoFeed"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="16dp"
            app:layout_constraintHorizontal_bias="0.0" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/tv_nomeLixoFeed" android:textSize="16sp"/>
    <TextView
            android:text="@string/endereco"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/tv_enderecoFeed" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/tv_informacoesLixoFeed"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="16dp" android:textSize="16sp"/>
    <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp" app:srcCompat="@drawable/comentario"
            android:id="@+id/iv_botaoComentatio" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/iv_fotoLixoFeed" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp"/>
    <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/tv_nomeLixoFeed" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="16dp" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/iv_botaoComentatio" android:text="@string/nome_lixo"
            android:textSize="16sp"/>

</android.support.constraint.ConstraintLayout>