<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/background_login"
        tools:context=".activity.AdicionarLixo">

    <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:text="Name"
            android:ems="10"
            android:id="@+id/editText" android:layout_marginEnd="16dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="16dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginTop="16dp"
            app:layout_constraintTop_toTopOf="parent" android:background="@drawable/background_texto_login"
            android:padding="12sp" android:textColor="@color/colorWhite" android:textColorHint="@color/colorWhite"
            android:textColorLink="@color/colorSecundary" android:textCursorDrawable="@color/colorPrimary"
            android:textColorHighlight="@color/colorSecundary"/>
    <EditText
            android:layout_width="0dp"
            android:layout_height="174dp"
            android:inputType="textMultiLine"
            android:gravity="start|top"
            android:ems="10"
            android:id="@+id/editText3"
            android:layout_marginEnd="16dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="16dp"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="0.0"
            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/textView2"
            android:background="@drawable/background_texto_login"
            android:textColor="@color/colorWhite" android:textColorHint="@color/colorWhite"
            android:textColorLink="@color/colorSecundary" android:textCursorDrawable="@color/colorPrimary"
            android:textColorHighlight="@color/colorSecundary"/>
    <TextView
            android:text="@string/informacoes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView2"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp" android:textSize="18sp" android:textColor="@color/colorWhite"
            app:layout_constraintTop_toBottomOf="@+id/editText"/>
    <Button
            android:text="@string/tirar_foto"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/bt_camera"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="16dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp" android:background="@drawable/background_botao_login"
            android:padding="12sp" android:textColor="@color/colorWhite"
            app:layout_constraintHorizontal_bias="1.0"
            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/et_endereco"/>
    <Button
            android:text="@string/fazer_publicacao"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/button2" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="parent"
            android:background="@drawable/background_botao_login" android:padding="12sp"
            android:textColor="@color/colorWhite"/>
    <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/et_endereco" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/editText3" android:layout_marginEnd="16dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="16dp"
            app:layout_constraintStart_toStartOf="parent" android:hint="@string/endereco"
            android:background="@drawable/background_texto_login" android:padding="12sp"
            android:textColor="@color/colorWhite" android:textColorHint="@color/colorWhite"
            android:textColorLink="@color/colorSecundary" android:textCursorDrawable="@color/colorPrimary"
            android:textColorHighlight="@color/colorSecundary"/>
</android.support.constraint.ConstraintLayout>