<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/background_login"
        tools:context=".activity.AdicionarPontoDeColeta">
    <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/et_nome_ponto_coleta" android:layout_marginStart="16dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="16dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent" android:hint="@string/nome_local"
            android:textColorHint="@color/colorWhite" android:textColor="@color/colorWhite"
            android:textColorHighlight="@color/colorSecundary" android:textColorLink="@color/colorSecundary"
            android:textCursorDrawable="@color/colorPrimary" android:background="@drawable/background_texto_login"
            android:padding="12sp" android:autofillHints=""/>
    <fragment xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:map="http://schemas.android.com/apk/res-auto"
              xmlns:tools="http://schemas.android.com/tools"
              android:id="@+id/map"
              android:name="com.google.android.gms.maps.SupportMapFragment"
              android:layout_width="366dp"
              android:layout_height="531dp"
              tools:context=".activity.AdicionarPontoDeColeta"
              android:layout_marginTop="8dp"
              map:layout_constraintTop_toBottomOf="@+id/et_nome_ponto_coleta" android:layout_marginStart="8dp"
              map:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="8dp"
              map:layout_constraintEnd_toEndOf="parent" android:layout_marginBottom="8dp"
              map:layout_constraintBottom_toTopOf="@+id/bt_salvar_ponto_coleta"/>
    <Button
            android:text="@string/salvar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/bt_salvar_ponto_coleta" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="16dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/bt_cancelar_ponto_coleta"
            android:background="@drawable/background_botao_login" android:textColor="@color/colorWhite"
            android:padding="12sp"/>
    <Button
            android:text="@string/cancelar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/bt_cancelar_ponto_coleta" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="16dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent" android:background="@drawable/background_botao_login"
            android:textColor="@color/colorWhite" android:padding="12sp"/>
</android.support.constraint.ConstraintLayout>