<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/background_login"
        tools:context=".activity.CadastroActivity">
    <ImageView
            android:layout_width="170dp"
            android:layout_height="230dp" app:srcCompat="@drawable/logo"
            android:id="@+id/imageView3"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"
            app:layout_constraintHorizontal_bias="0.497" android:layout_marginTop="50dp"
            app:layout_constraintTop_toTopOf="parent"/>
    <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@drawable/background_texto_login"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/et_cadastro_nome" android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/imageView3" android:layout_marginEnd="16dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="16dp"
            app:layout_constraintStart_toStartOf="parent" android:padding="12sp" android:textColor="@color/colorWhite"
            android:textColorLink="@color/colorSecundary" android:textColorHighlight="@color/colorSecundary"
            android:hint="@string/nome" android:textColorHint="@color/colorWhite"
            android:textCursorDrawable="@color/colorPrimary"/>
    <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@drawable/background_texto_login"
            android:inputType="textEmailAddress"
            android:ems="10"
            android:id="@+id/et_cadastro_email" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/et_cadastro_nome"
            android:layout_marginEnd="16dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="16dp"
            app:layout_constraintStart_toStartOf="parent" android:hint="@string/e_mail" android:padding="12sp"
            android:textColor="@color/colorWhite" android:textColorHighlight="@color/colorSecundary"
            android:textColorLink="@color/colorSecundary" android:textColorHint="@color/colorWhite"
            android:textCursorDrawable="@color/colorPrimary"/>
    <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@drawable/background_texto_login"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/et_cadastro_senha" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/et_cadastro_email" android:layout_marginEnd="16dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="16dp"
            app:layout_constraintStart_toStartOf="parent" android:hint="@string/senha"
            android:textColorHint="@color/colorWhite" android:padding="12sp" android:textColor="@color/colorWhite"
            android:textColorHighlight="@color/colorSecundary" android:textColorLink="@color/colorSecundary"
            android:textCursorDrawable="@color/colorPrimary"/>
    <Button
            android:text="Cadastrar"
            android:layout_width="0dp"
            android:background="@drawable/background_botao_login"
            android:layout_height="wrap_content"
            android:id="@+id/bt_cadastro" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="16dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="16dp"
            android:textColor="@color/colorWhite" android:padding="12sp" app:layout_constraintHorizontal_bias="0.0"
            android:layout_marginTop="24dp" app:layout_constraintTop_toBottomOf="@+id/et_cadastro_senha"/>
</android.support.constraint.ConstraintLayout>